--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Open House Proto.</tw-noscript></noscript></tw-story>
 <tw-storydata name="Open House Proto" startnode="1" creator="Twine" creator-version="2.6.2" format="Harlowe" format-version="3.3.5" ifid="089ED02C-D699-4F66-8AEF-2EA59E9C2DFA" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Beginnings" tags="" position="650,350" size="100,100">You&#39;re eating breakfast - Weetbix. Lifeless clumps of shredded grain swimming in your alt-milk of choice (that is, whichever was discounted when you last stocked up.) The morning is treating you as badly as always and you&#39;re resisting the nagging idea that you need to finish the gruel and do something... productive.
 
-&lt;img class=&quot;story-image&quot; src=&quot;./images/breakfast&quot; alt=&quot;bowl of breakfast&quot; /&gt;
+&lt;img class=&quot;story-image&quot; src=&quot;./images/breakfast.jpg&quot; alt=&quot;bowl of breakfast&quot; /&gt;
 
 Spoon about to enter mouth, you&#39;re interrupted by [[the door bell.]]</tw-passagedata><tw-passagedata pid="2" name="the door bell." tags="" position="650,475" size="100,100"></tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
