--- a/index.html
+++ b/index.html
@@ -9,11 +9,51 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Open House Proto.</tw-noscript></noscript></tw-story>
-<tw-storydata name="Open House Proto" startnode="1" creator="Twine" creator-version="2.6.2" format="Harlowe" format-version="3.3.5" ifid="089ED02C-D699-4F66-8AEF-2EA59E9C2DFA" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Beginnings" tags="" position="650,350" size="100,100">You&#39;re eating breakfast - Weetbix. Lifeless clumps of shredded grain swimming in your alt-milk of choice (that is, whichever was discounted when you last stocked up.) The morning is treating you as badly as always and you&#39;re resisting the nagging idea that you need to finish the gruel and do something... productive.
+<tw-storydata name="Open House Proto" startnode="1" creator="Twine" creator-version="2.6.2" format="Harlowe" format-version="3.3.5" ifid="089ED02C-D699-4F66-8AEF-2EA59E9C2DFA" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap');
+
+tw-story {
+  font-family: 'Noto Serif', serif;
+  color: #000;
+  background-color: #F9F1EF;
+}
+
+.story-image {
+  width: 100%;
+}
+
+tw-link, tw-link:link, tw-link:visited, tw-link.visited {
+  color: #000;
+  text-decoration: underline;
+}
+tw-link:focus, tw-link:hover, tw-link:active, tw-link.visited:hover {
+  color: #FFF;
+  text-decoration: none;
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Beginnings" tags="" position="650,350" size="100,100">You&#39;re eating breakfast - Weetbix. Lifeless clumps of shredded grain swimming in your alt-milk of choice (that is, whichever was discounted when you last stocked up.) The morning is treating you as badly as always and you&#39;re resisting the nagging idea that you need to finish the gruel and do something... productive.
 
 &lt;img class=&quot;story-image&quot; src=&quot;./images/breakfast.jpg&quot; alt=&quot;bowl of breakfast&quot; /&gt;
 
-Spoon about to enter mouth, you&#39;re interrupted by [[the door bell.]]</tw-passagedata><tw-passagedata pid="2" name="the door bell." tags="" position="650,475" size="100,100"></tw-passagedata></tw-storydata>
+Spoon about to enter mouth, you&#39;re [[interrupted by the door bell.]]</tw-passagedata><tw-passagedata pid="2" name="interrupted by the door bell." tags="" position="650,475" size="100,100">Surprised, you move to the intercom and press the button to answer. A crackly voice fills the room.
+&quot;Morning, is this R___?&quot;
+You can&#39;t say you&#39;re familiar with the voice, although it isn&#39;t exactly clear through the system. Whoever it is, they seem to know you. 
+&quot;Yes, it is, can I help you?&quot; you respond. 
+&quot;I&#39;m Carlo, from Ernie Francis Real Estate. I&#39;m here with the owners for today&#39;s open house. We&#39;re just coming up now.&quot;
+
+//Open house? What?//
+
+[[Fuck...]]</tw-passagedata><tw-passagedata pid="3" name="Fuck..." tags="" position="650,600" size="100,100">TEST PASSAGE
+---
+You can&#39;t find it in you to reject  
+What bullshit was this? There was no email, or notice.  No way they can just drop in unannounced like this. And for an open house? You think of what you&#39;re going to say,how you&#39;ll play it. 
+
+[[Go off on the agent as soon as they open the door.]]
+[[Play it cool]]
+---
+The little magnetic messageboard set is a crazed mess on the fridge door. You remember rushing to erase the childishly obscene message left on it, the moment before your parents came in for a visit. Come to think of it, you could put a message up now...
+
+[[Write something rude.]]
+[[Write something pleasant.]]
+[[Do nothing]]
+</tw-passagedata><tw-passagedata pid="4" name="Go off on the agent as soon as they open the door." tags="" position="775,850" size="100,100"></tw-passagedata><tw-passagedata pid="5" name="Play it cool" tags="" position="525,850" size="100,100"></tw-passagedata><tw-passagedata pid="6" name="Write something rude." tags="" position="525,725" size="100,100"></tw-passagedata><tw-passagedata pid="7" name="Write something pleasant." tags="" position="650,725" size="100,100"></tw-passagedata><tw-passagedata pid="8" name="Do nothing" tags="" position="775,725" size="100,100"></tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
