--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@ You can&#39;t say you&#39;re familiar with the voice, although it isn&#39;t exac
 
 [[Fuck...]]</tw-passagedata><tw-passagedata pid="3" name="Fuck..." tags="" position="650,600" size="100,100">TEST PASSAGE
 ---
-You can&#39;t find it in you to reject  
-What bullshit was this? There was no email, or notice.  No way they can just drop in unannounced like this. And for an open house? You think of what you&#39;re going to say,how you&#39;ll play it. 
+You can&#39;t find it in you to reject the agent over the intercom. He&#39;s already barged inside anyway.
+What bullshit was this? There was no email, no notice. No way they can just drop in unannounced like this. And for an open house? You think of what you&#39;re going to say, how you&#39;ll play it. 
 
 [[Go off on the agent as soon as they open the door.]]
-[[Play it cool]]
+[[Play it cool.]]
 ---
-The little magnetic messageboard set is a crazed mess on the fridge door. You remember rushing to erase the childishly obscene message left on it, the moment before your parents came in for a visit. Come to think of it, you could put a message up now...
+The little magnetic messageboard set is a crazed mess on the fridge door. You remember rushing to erase the obscene message left on it when your parents dropped in for a visit. Come to think of it, you could put a message up now...
 
 [[Write something rude.]]
 [[Write something pleasant.]]
-[[Do nothing]]
-</tw-passagedata><tw-passagedata pid="4" name="Go off on the agent as soon as they open the door." tags="" position="775,850" size="100,100"></tw-passagedata><tw-passagedata pid="5" name="Play it cool" tags="" position="525,850" size="100,100"></tw-passagedata><tw-passagedata pid="6" name="Write something rude." tags="" position="525,725" size="100,100"></tw-passagedata><tw-passagedata pid="7" name="Write something pleasant." tags="" position="650,725" size="100,100"></tw-passagedata><tw-passagedata pid="8" name="Do nothing" tags="" position="775,725" size="100,100"></tw-passagedata></tw-storydata>
+[[Do nothing.]]
+</tw-passagedata><tw-passagedata pid="4" name="Go off on the agent as soon as they open the door." tags="" position="775,850" size="100,100"></tw-passagedata><tw-passagedata pid="5" name="Write something rude." tags="" position="525,725" size="100,100"></tw-passagedata><tw-passagedata pid="6" name="Write something pleasant." tags="" position="650,725" size="100,100"></tw-passagedata><tw-passagedata pid="7" name="Play it cool." tags="" position="650,850" size="100,100"></tw-passagedata><tw-passagedata pid="8" name="Do nothing." tags="" position="775,725" size="100,100"></tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
