--- a/index.html
+++ b/index.html
@@ -28,9 +28,24 @@ tw-link, tw-link:link, tw-link:visited, tw-link.visited {
 tw-link:focus, tw-link:hover, tw-link:active, tw-link.visited:hover {
   color: #FFF;
   text-decoration: none;
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Beginnings" tags="" position="650,350" size="100,100">You&#39;re eating breakfast - Weetbix. Lifeless clumps of shredded grain swimming in your alt-milk of choice (that is, whichever was discounted when you last stocked up.) The morning is treating you as badly as always and you&#39;re resisting the nagging idea that you need to finish the gruel and do something... productive.
+}
 
-&lt;img class=&quot;story-image&quot; src=&quot;./images/breakfast.jpg&quot; alt=&quot;bowl of breakfast&quot; /&gt;
+.begin-text {
+  display: grid;  /* sets the display to grid on the surrounding div */
+  grid-template-columns: 50% 50%;  /* sets each column to 50% */
+}
+.beg-text-1 {
+  grid-column: 1;  /* sets which column the text appears in */
+  grid-row: 1;
+  box-sizing: border-box;
+  padding: 10px;
+}
+.beg-text-2 {
+  grid-column: 2;  /* sets which column the image appears in */
+  grid-row: 1;
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Beginnings" tags="" position="650,350" size="100,100">&lt;div class=&quot;begin-text&quot;&gt;&lt;div class=&quot;beg-text-1&quot;&gt;You&#39;re eating breakfast - Weetbix. Lifeless clumps of shredded grain swimming in your alt-milk of choice (that is, whichever was discounted when you last stocked up.) The morning is treating you as badly as always and you&#39;re resisting the nagging idea that you need to finish the gruel and do something... productive.&lt;/div&gt;&lt;div class=&quot;beg-text-2&quot;&gt;Someone somewhere is having a thought. A very strange, crab-like throught, that we&#39;d think would go well with sauce gribiche.&lt;/div&gt;&lt;/div&gt;
+
+&lt;img style=&quot;width: 50%;&quot; class=&quot;story-image&quot; src=&quot;./images/breakfast.jpg&quot; alt=&quot;bowl of breakfast&quot; /&gt;
 
 Spoon about to enter mouth, you&#39;re [[interrupted by the door bell.]]</tw-passagedata><tw-passagedata pid="2" name="interrupted by the door bell." tags="" position="650,475" size="100,100">Surprised, you move to the intercom and press the button to answer. A crackly voice fills the room.
 &quot;Morning, is this R___?&quot;
