--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ tw-link:focus, tw-link:hover, tw-link:active, tw-link.visited:hover {
 
 &lt;img style=&quot;width: 50%;&quot; class=&quot;story-image&quot; src=&quot;./images/breakfast.jpg&quot; alt=&quot;bowl of breakfast&quot; /&gt;
 
-Spoon about to enter mouth, ITS GONE THROUGH you&#39;re [[interrupted by the door bell.]]</tw-passagedata><tw-passagedata pid="2" name="interrupted by the door bell." tags="" position="650,475" size="100,100">Surprised, you move to the intercom and press the button to answer. A crackly voice fills the room.
+Spoon about to enter mouth, ITS GONE THROUGH Again you&#39;re [[interrupted by the door bell.]]</tw-passagedata><tw-passagedata pid="2" name="interrupted by the door bell." tags="" position="650,475" size="100,100">Surprised, you move to the intercom and press the button to answer. A crackly voice fills the room.
 &quot;Morning, is this R___?&quot;
 You can&#39;t say you&#39;re familiar with the voice, although it isn&#39;t exactly clear through the system. Whoever it is, they seem to know you. 
 &quot;Yes, it is, can I help you?&quot; you respond. 
